--- a/src/styles/PaperCard.css
+++ b/src/styles/PaperCard.css
@@ -7,6 +7,8 @@
   transition: background-color 0.3s ease;
   position: relative; /* Add this line */
   height: 400px; /* Add this line */
+  display: flex; /* Add this line */
+  flex-direction: column; /* Add this line */
 }
 
 .card:hover {
@@ -26,7 +28,6 @@
   border-radius: 4px; /* Add border-radius for rounded corners */
   margin-bottom: 8px; /* Add some spacing at the bottom */
 }
-
 
 .text-lg {
   font-size: 18px;
@@ -79,4 +80,19 @@
   padding: 4px 8px; /* Add padding for better visibility */
   border-radius: 4px; /* Add border-radius for rounded corners */
   margin-left: 8px;
+}
+
+.card-content {
+  flex: 1; /* Adjust the flex value to occupy remaining space */
+  display: flex; /* Add this line */
+  flex-direction: column; /* Add this line */
+}
+
+.title-area {
+  flex: 0 0 auto; /* Change flex value to prevent growth */
+}
+
+.abstract-area {
+  flex: 1; /* Adjust the flex value to occupy remaining space */
+  margin-top: 8px;
 }
